# stringly-typed

./: .travis-ci.yml  .travis.yml  Cargo.toml  README.md
benches/: comparisons.rs
src/: lib.rs
stringly-typed-derive/: Cargo.toml
stringly-typed-derive/src/: lib.rs
stringly_typed_derive/: Cargo.toml
tests/: smoke_tests.rs
