[package]
name = "stringly-typed"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
stringly-typed-derive = { path = "./stringly-typed-derive" }

[features]
default = ["std"]
std = []

[workspace]
members = ["stringly-typed-derive"]

[dev-dependencies]
serde = "1.0.38"
serde_json = "1.0.14"
serde_derive = "1.0.38"
