[package]
name = "stringly_typed"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
stringly_typed_derive = { path = "./stringly_typed_derive" }

[features]
default = ["std"]
std = []

[workspace]
members = ["stringly_typed_derive"]

[dev-dependencies]
serde = "1.0.38"
serde_json = "1.0.14"
serde_derive = "1.0.38"
