[package]
name = "stringly_typed"
version = "0.1.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
repository = "https://github.com/Michael-F-Bryan/stringly-typed"
description = "A crate for updating values and indexing into Rust types at runtime"
keywords = ["stringly", "typed", "stringly-typed"]
license = "MIT"

[badges]
travis-ci = { repository = "Michael-F-Bryan/stringly-typed", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
# stringly_typed_derive = { path = "./stringly_typed_derive" }
stringly_typed_derive = "0.1.0"

[features]
default = ["std"]
std = []

[workspace]
members = ["stringly_typed_derive"]

[dev-dependencies]
serde = "1.0.38"
serde_json = "1.0.14"
serde_derive = "1.0.38"
