[package]
name = "stringly_typed_derive"
version = "0.1.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
repository = "https://github.com/Michael-F-Bryan/stringly-typed"
description = "Custom derives for the stringly_typed crate"
license = "MIT"
readme = "../README.md"
workspace = ".."
keywords = ["stringly", "typed", "derive", "stringly-typed"]
categories = ["development-tools::procedural-macro-helpers"]

[badges]
travis-ci = { repository = "Michael-F-Bryan/stringly-typed", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = "0.13.1"
quote = "0.5.1"
synstructure = "0.8.1"
